hphp/hack/test/typecheck/coeffects/poly_var_reassign/list_destructure.php.exp
File "list_destructure.php", line 6, characters 3-25:
This variable cannot be reassigned because it is used for a dependent context (Typing[4404])
